# nanograd

./: README.md  pyproject.toml
.github/workflows/: codeflash-optimize.yaml
src/nanograd/: __init__.py  bubblesort.py  ch5_3b1b.py  main.py  value.py
tests/: bubblesort_test.py
