[project]
name = "nanograd"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Alok Singh", email = "alokbeniwal@gmail.com" }, { name = "Elliot Glazer", email = "elliotglazer@gmail.com" }
]
dependencies = [
    "ipykernel>=6.29.5",
    "jaxtyping>=0.2.33",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "einops>=0.8.0",
    "tyro>=0.8.6",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/nanograd"]
