[project]
name = "nanograd"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Alok Singh", email = "alokbeniwal@gmail.com" },
    { name = "Elliot Glazer", email = "elliotglazer@gmail.com" },
]
dependencies = [
    "ipykernel>=6.29.5",
    "jaxtyping>=0.2.33",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "einops>=0.8.0",
    "tyro>=0.8.6",
    "matplotlib>=3.9.1.post1",
    "graphviz>=0.20.3",
    "scikit-learn>=1.5.1",
    "gensim>=4.3.3",
    "jax>=0.4.31",
    "jaxlib>=0.4.31",
    "fancy-einsum>=0.0.3",
    "codeflash>=0.6.17",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["black>=24.8.0"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/nanograd"]

[tool.codeflash]
# All paths are relative to this pyproject.toml's directory.
module-root = "src/nanograd"
tests-root = "tests"
test-framework = "pytest"
ignore-paths = []
formatter-cmds = ["black $file"]
